@@ -3,6 +3,8 @@ Version 0.63
 	- [FIREFOX3 input] Added a check to see if the SQlite database contains a -wal or -shm (in addition to -journal)
 	And if it does, then do the same procedure as if it was a -journal (read-only database that gets copied to a temp location)
 	This was pointed to me by Svante
+	- [PREFETCH input] Changed the default output so that loaded DLLs are not included by default, unless the -d|--detail
+	option/parameter is used.
 
 
 Version 0.62 (23/11/2011)
